@@ -162,6 +162,21 @@ bool wxTextInputStream::EatEOL(const wxChar &c)
     return false;
 }
 
+wxUint64 wxTextInputStream::Read64(int base)
+{
+    wxASSERT_MSG( !base || (base > 1 && base <= 36), wxT("invalid base") );
+    if(!m_input) return 0;
+
+    wxString word = ReadWord();
+    if(word.empty())
+        return 0;
+
+    wxUint64 res;
+    if(!word.ToULongLong(&res, base))
+        return 0;
+    return res;
+}
+
 wxUint32 wxTextInputStream::Read32(int base)
 {
     wxASSERT_MSG( !base || (base > 1 && base <= 36), wxT("invalid base") );
@@ -181,6 +196,21 @@ wxUint16 wxTextInputStream::Read16(int base)
 wxUint8 wxTextInputStream::Read8(int base)
 {
     return (wxUint8)Read32(base);
+}
+
+wxInt64 wxTextInputStream::Read64S(int base)
+{
+    wxASSERT_MSG( !base || (base > 1 && base <= 36), wxT("invalid base") );
+    if(!m_input) return 0;
+
+    wxString word = ReadWord();
+    if(word.empty())
+        return 0;
+
+    wxInt64 res;
+    if(!word.ToLongLong(&res, base))
+        return 0;
+    return res;
 }
 
 wxInt32 wxTextInputStream::Read32S(int base)
@@ -309,6 +339,12 @@ wxTextInputStream& wxTextInputStream::operator>>(wxInt32& i)
     return *this;
 }
 
+wxTextInputStream& wxTextInputStream::operator>>(wxInt64& i)
+{
+    i = (wxInt64)Read64();
+    return *this;
+}
+
 wxTextInputStream& wxTextInputStream::operator>>(wxUint16& i)
 {
     i = Read16();
@@ -318,6 +354,12 @@ wxTextInputStream& wxTextInputStream::operator>>(wxUint16& i)
 wxTextInputStream& wxTextInputStream::operator>>(wxUint32& i)
 {
     i = Read32();
+    return *this;
+}
+
+wxTextInputStream& wxTextInputStream::operator>>(wxUint64& i)
+{
+    i = Read64();
     return *this;
 }
 
@@ -374,6 +416,14 @@ void wxTextOutputStream::SetMode(wxEOL mode)
         m_mode = wxEOL_UNIX;
 #endif
     }
+}
+
+void wxTextOutputStream::Write64(wxUint64 i)
+{
+    wxString str;
+    str.Printf(wxT("%" wxLongLongFmtSpec "u"), (unsigned long long)i);
+
+    WriteString(str);
 }
 
 void wxTextOutputStream::Write32(wxUint32 i)
@@ -520,6 +570,13 @@ wxTextOutputStream& wxTextOutputStream::operator<<(wxInt32 c)
     return *this;
 }
 
+wxTextOutputStream& wxTextOutputStream::operator<<(wxInt64 c)
+{
+    WriteString(wxString::Format("%" wxLongLongFmtSpec "d", c));
+
+    return *this;
+}
+
 wxTextOutputStream& wxTextOutputStream::operator<<(wxUint16 c)
 {
     wxString str;
@@ -534,6 +591,13 @@ wxTextOutputStream& wxTextOutputStream::operator<<(wxUint32 c)
     wxString str;
     str.Printf(wxT("%lu"), (unsigned long)c);
     WriteString(str);
+
+    return *this;
+}
+
+wxTextOutputStream& wxTextOutputStream::operator<<(wxUint64 c)
+{
+    WriteString(wxString::Format("%" wxLongLongFmtSpec "u", c));
 
     return *this;
 }
